--- a/report-api/build.gradle
+++ b/report-api/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation libs.nva.json
     implementation libs.nva.commons.auth
     implementation libs.nva.commons.secrets
+    implementation libs.nva.s3
     implementation libs.aws.sdk2.secrets
     implementation libs.bundles.jena
     implementation libs.jackson.databind
@@ -16,6 +17,7 @@ dependencies {
     implementation group: 'org.apache.poi', name: 'poi', version: '5.2.4'
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.4'
 
+    implementation libs.aws.lambda.events
     implementation libs.aws.sdk2.s3
     implementation libs.aws.sdk2.sqs
     implementation libs.aws.sdk2.apache.client
@@ -43,4 +45,5 @@ test {
     environment("AWS_REGION", "eu-west-1")
     environment("NVI_REPORTS_BUCKET", "nvi-reports")
     environment("SIGN_DURATION_IN_MINUTES", "60")
+    environment("GRAPH_DATABASE_PAGE_SIZE", "5")
 }
