--- a/testing-utils/build.gradle
+++ b/testing-utils/build.gradle
@@ -5,6 +5,12 @@ plugins {
 dependencies {
     implementation(project(':data-report-commons'))
     implementation libs.jena.fuseki
+    implementation libs.nva.commons.core
+    implementation libs.nva.json
+    implementation libs.bundles.jackson
+    implementation(libs.nva.testutils) {
+        exclude group: 'org.wiremock', module: 'wiremock'
+    }
 }
 
 repositories {
