--- a/data-report-commons/build.gradle
+++ b/data-report-commons/build.gradle
@@ -4,7 +4,9 @@ plugins {
 
 dependencies {
     implementation libs.nva.commons.core
+    implementation libs.nva.s3
     implementation libs.nva.json
+    implementation libs.nva.eventhandlers
     implementation libs.bundles.jena
     implementation libs.bundles.jackson
     implementation libs.jena.core
@@ -12,6 +14,10 @@ dependencies {
     implementation libs.jena.rdfconnection
     testImplementation(project(':testing-utils'))
     testImplementation libs.jena.fuseki
+    implementation libs.aws.sdk2.lambda.events
+    implementation libs.aws.sdk2.eventbridge
+    implementation libs.aws.sdk2.s3
+    implementation libs.aws.sdk2.urlconnection
     testImplementation(libs.nva.testutils) {
         exclude group: 'org.wiremock', module: 'wiremock'
     }
