--- a/testing-utils/build.gradle
+++ b/testing-utils/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation libs.nva.identifiers
     implementation libs.jena.fuseki
     implementation libs.bundles.jackson
+    implementation libs.aws.sdk2.eventbridge
     implementation(libs.nva.testutils) {
         exclude group: 'org.wiremock', module: 'wiremock'
     }
