--- a/template.yaml
+++ b/template.yaml
@@ -111,6 +111,13 @@ Resources:
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt GenerateNviInstitutionReportDLQ.Arn
         maxReceiveCount: 5
+
+  TransformPersistedResourceQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      RedrivePolicy:
+        deadLetterTargetArn: !GetAtt TransformPersistedResourceDLQ.Arn
+        maxReceiveCount: 5
       # ---- DLQs ----
   GenerateNviInstitutionReportDLQ:
     Type: AWS::SQS::Queue
@@ -120,7 +127,7 @@ Resources:
     Type: AWS::SQS::Queue
     Properties:
       MessageRetentionPeriod: 1209600 #14 days
-  DataLoadingDLQ:
+  TransformPersistedResourceDLQ:
     Type: AWS::SQS::Queue
     Properties:
       MessageRetentionPeriod: 1209600 #14 days
@@ -301,8 +308,8 @@ Resources:
               - prefix: !Ref NviCandidatesPrefix
       State: ENABLED
       Targets:
-        - Arn: !GetAtt DataLoadingHandler.Arn
-          Id: "DataLoadingHandler"
+        - Arn: !GetAtt TransformPersistedResourceQueue.Arn
+          Id: "TransformPersistedResourceQueue"
           InputTransformer:
             InputPathsMap:
               bucketName: "$.detail.bucket.name"
@@ -419,7 +426,7 @@ Resources:
         - !GetAtt NeptuneManagedPolicy.PolicyArn
         - !GetAtt SqsManagedPolicy.PolicyArn
         - !GetAtt DeployToVpnPolicy.PolicyArn
-      Timeout: 600
+      Timeout: 30
       MemorySize: 1536
       AutoPublishAlias: live
       Environment:
@@ -428,11 +435,16 @@ Resources:
           BACKEND_CLIENT_SECRET_NAME: 'BackendCognitoClientCredentials'
           EXPANDED_RESOURCES_BUCKET: !Ref ResourcesBucket
           EXPORT_BUCKET: !Ref ExportBucket
+      Events:
+        SqsEvent:
+          Type: SQS
+          Properties:
+            Queue: !GetAtt TransformPersistedResourceQueue.Arn
       EventInvokeConfig:
         DestinationConfig:
           OnFailure:
             Type: SQS
-            Destination: !GetAtt DataLoadingDLQ.Arn
+            Destination: !GetAtt TransformPersistedResourceDLQ.Arn
 
   BulkDataLoader:
     Type: AWS::Serverless::Function
