--- a/template.yaml
+++ b/template.yaml
@@ -27,6 +27,9 @@ Parameters:
     Type: 'AWS::SSM::Parameter::Value<String>'
     Description: Data warehouse Databricks Unity Catalog ARN
     Default: /NVA/IAM/DataWarehouse/DataBricksArn
+  DataWarehouseRoleName:
+    Type: String
+    Default: DataWarehouseRole-${ProjectName}
   DataWarehouseExternalId:
     Type: 'AWS::SSM::Parameter::Value<String>'
     Description: External ID to assume DataWarehouseRole
@@ -138,10 +141,13 @@ Resources:
 
   #============================= Roles ==========================================================
 
+
+
   DataWarehouseRole:
     Type: AWS::IAM::Role
     Properties:
       Description: Provides external access when paired with known external account and id
+      RoleName: !Ref DataWarehouseRoleName
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -156,11 +162,8 @@ Resources:
           - Effect: Allow
             Principal:
               AWS:
-                - !Sub arn:aws:iam::${AWS::AccountId}:root
+                - !Sub 'arn:aws:iam::${AWS::AccountId}:role/${DataWarehouseRoleName}'
             Action: sts:AssumeRole
-            Condition:
-              ArnEquals:
-                aws:PrincipalArn: !Sub 'arn:aws:iam::${AWS::AccountId}:role/${DataWarehouseRole}'
       Policies:
         - PolicyName: S3ExportPolicy
           PolicyDocument:
