--- a/template.yaml
+++ b/template.yaml
@@ -147,9 +147,7 @@ Resources:
         Statement:
           - Effect: Allow
             Principal:
-              AWS:
-              - !Ref DataWarehouseDataBricksArn
-              - 'arn:aws:iam::${AWS::AccountId}:role/DataWarehouseRole'
+              AWS: !Ref DataWarehouseDataBricksArn
             Action: sts:AssumeRole
             Condition:
               StringEquals:
