--- a/template.yaml
+++ b/template.yaml
@@ -142,9 +142,7 @@ Resources:
             Effect: Allow
             Principal: '*'
             Action: sqs:SendMessage
-            Resource:
-              - !GetAtt TransformPersistedResourceQueue.Arn
-              - !GetAtt TransformPersistedResourceDLQ.Arn
+            Resource: !GetAtt TransformPersistedResourceQueue.Arn
             Condition:
               ArnEquals:
                 aws:SourceArn: !GetAtt PersistedResourcesEventRule.Arn
