--- a/buildSrc/src/main/groovy/nva.data.report.api.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/nva.data.report.api.java-conventions.gradle
@@ -11,8 +11,11 @@ dependencies {
     testImplementation libs.bundles.testing
 }
 
-sourceCompatibility = JavaVersion.VERSION_21  // source-code version and must be <= targetCompatibility
-targetCompatibility = JavaVersion.VERSION_21 // bytecode target version
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    // source-code version and must be <= targetCompatibility
+    targetCompatibility = JavaVersion.VERSION_21 // bytecode target version
+}
 
 tasks.named('test') {
     useJUnitPlatform()
@@ -23,7 +26,7 @@ tasks.named('test') {
 }
 
 pmd {
-    toolVersion = '6.20.0'
+    toolVersion = '7.5.0'
     ruleSetConfig = rootProject.resources.text.fromFile('config/pmd/ruleset.xml')
     ruleSets = []
     ignoreFailures = false
