Move key batches handler

--- a/template.yaml
+++ b/template.yaml
@@ -239,23 +239,13 @@ Resources:
             Type: SQS
             Destination: !GetAtt TransformPersistedResourceDLQ.Arn
 
-
-  ResetDatabaseButton:
-    Type: AWS::Serverless::Function
-    Properties:
-      CodeUri: database-tools
-      Handler: no.sikt.nva.data.report.dbtools.DatabaseResetHandler::handleRequest
-      Timeout: 600
-      MemorySize: 1536
-      AutoPublishAlias: live
-
   #---- Generates key batches in bucket ----
 
   GenerateKeyBatchesHandler:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: bulk-load
-      Handler: no.sikt.nva.data.report.api.etl.transformer.GenerateKeyBatchesHandler::handleRequest
+      Handler: no.sikt.nva.data.report.api.export.GenerateKeyBatchesHandler::handleRequest
       Policies:
         - !GetAtt S3ManagedPolicy.PolicyArn
       Timeout: 600
@@ -275,34 +265,6 @@ Resources:
             Pattern:
               detail:
                 topic: [ 'ReportApi.Bulk.KeyBasedBatch' ]
-
-  NquadsBulkTransformerHandler:
-    Type: AWS::Serverless::Function
-    Properties:
-      CodeUri: bulk-load
-      Handler: no.sikt.nva.data.report.api.etl.transformer.NquadsTransformer::handleRequest
-      Timeout: 600
-      MemorySize: 1536
-      AutoPublishAlias: live
-      Policies:
-        - !GetAtt S3ManagedPolicy.PolicyArn
-        - !GetAtt DeleteS3ObjectPolicy.PolicyArn
-      Environment:
-        Variables:
-          EVENT_BUS: !GetAtt BatchLoadEventBus.Name
-          EXPANDED_RESOURCES_BUCKET: !Ref ResourcesBucket
-          KEY_BATCHES_BUCKET: !Ref KeyBatchesBucket
-          LOADER_BUCKET: !Ref LoaderBucket
-          TOPIC: 'ReportApi.Bulk.TransformKeyBatchNquads'
-          API_HOST: !Ref ApiDomain
-      Events:
-        BatchIndexEvent:
-          Type: EventBridgeRule
-          Properties:
-            EventBusName: !GetAtt BatchLoadEventBus.Name
-            Pattern:
-              detail:
-                topic: [ 'ReportApi.Bulk.TransformKeyBatchNquads' ]
 
   CsvBulkTransformerHandler:
     Type: AWS::Serverless::Function
