--- a/data-report-commons/build.gradle
+++ b/data-report-commons/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation libs.aws.sdk2.eventbridge
     implementation libs.aws.sdk2.s3
     implementation libs.aws.sdk2.urlconnection
+    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.12.0'
     testImplementation(libs.nva.testutils) {
         exclude group: 'org.wiremock', module: 'wiremock'
     }
