--- a/template.yaml
+++ b/template.yaml
@@ -163,7 +163,7 @@ Resources:
           - Effect: Allow
             Principal:
               AWS:
-              - !Ref DataWarehouseDataBricksArn
+                - !Ref DataWarehouseDataBricksArn
             Action: sts:AssumeRole
             Condition:
               StringEquals:
@@ -189,6 +189,10 @@ Resources:
                 Resource:
                   - !Sub '${ExportBucket.Arn}/*'
                   - !Sub '${ExportBucket.Arn}'
+        - PolicyName: AssumeRolePolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
               - Effect: Allow
                 Action: [ 'iam:GetRole', 'sts:AssumeRole' ]
                 Resource: !Sub arn:aws:iam::${AWS::AccountId}:role/${DataWarehouseRoleName}
