--- a/data-loading/build.gradle
+++ b/data-loading/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     implementation libs.nva.commons.core
     implementation libs.nva.s3
     implementation libs.nva.json
-    implementation libs.aws.sdk2.lambda.events
+    implementation libs.aws.lambda.events
     implementation libs.aws.lambda.java.core
     implementation libs.aws.sdk2.s3
     implementation libs.bundles.logging
