--- a/data-report-commons/build.gradle
+++ b/data-report-commons/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation libs.jena.rdfconnection
     testImplementation(project(':testing-utils'))
     testImplementation libs.jena.fuseki
-    implementation libs.aws.sdk2.lambda.events
+    implementation libs.aws.lambda.events
     implementation libs.aws.sdk2.eventbridge
     implementation libs.aws.sdk2.s3
     implementation libs.aws.sdk2.urlconnection
