feat: Enable backup

--- a/template.yaml
+++ b/template.yaml
@@ -366,6 +366,6 @@ Resources:
               NoncurrentDays: !Ref S3NoncurrentVersionExpirationDays
       Tags:
           - Key: IncludedInBackup
-            Value: "false"
+            Value: "true"
       VersioningConfiguration:
           Status: Enabled
